--- a/templates/board.html
+++ b/templates/board.html
@@ -1,20 +1,23 @@
 <div class="board-selector">
-    <div class="board-link button" *ngFor="#board of boards">
+    <div class="board-link button" *ngFor="let board of boards">
         <div (click)="boardSelect(board.id)">{{ board.title }}</div>
     </div>
 </div>
 <div class="current-board" *ngIf="selectedBoard">
     <h2>{{ selectedBoard.title }}</h2>
         <div class="container">
-            <div class="list two columns" *ngFor="#list of selectedBoard.lists">
-                <h4>{{ list.title }}</h4>
+            <div class="list two columns" *ngFor="let list of selectedBoard.lists">
+                <h4><ndv-edit [title]="'title'" [permission]="checkPermissions(perm)" [placeholder]='list.title' (onSave)='save($event)'></ndv-edit></h4>
                 <ul>
-                    <li class="card" *ngFor="#card of list.cards">{{card.title}}</li>
-                    <li class="button" (click)="addCardToList(list)">Add Card</li>
+                    <li class="card" *ngFor="let card of list.cards">
+                        <!--<ndv-edit [title]="'title'" [permission]="checkPermissions(perm)" [placeholder]='card.title' (onSave)='save($event)'></ndv-edit>-->
+                        {{ card.title }}
+                    </li>
+                    <li class="button">Add Card</li>
                 </ul>
             </div>
             <div class="list two columns">
-            <h4>Add List</h4>
+            <h4 class="button" (click)="addNewList()">Add List</h4>
 
             </div>
         </div>
