--- a/templates/board.html
+++ b/templates/board.html
@@ -5,20 +5,24 @@
 </div>
 <div class="current-board" *ngIf="selectedBoard">
     <h2>{{ selectedBoard.title }}</h2>
-        <div class="container" >
-            <div class="list two columns"  *ngFor="let list of selectedBoard.lists">
-            <span class="drag-symbol">&#x21d4;</span>
-                <h4><ndv-edit [title]="'title'" [permission]="checkPermissions(perm)" [placeholder]='list.title' (onSave)='save($event, list)'></ndv-edit></h4>
-                <ul [dragula]='"card-bag"' [dragulaModel]='list.cards'>
+        <div class="container"  >
+        <div class="bag" [dragula]='"list-bag"' [dragulaModel]='selectedBoard.lists'>
+            <div class="list two columns" *ngFor="let list of selectedBoard.lists">
+                <span class="drag-handle">&#x21d4;</span>
+                <h4><ndv-area [title]="'title'" [permission]="checkPermissions(perm)" [placeholder]='list.title' (onSave)='saveList($event, list)'></ndv-area></h4>
+                <ul class="cards" [dragula]='"card-bag"' [dragulaModel]='list.cards'>
                     <li class="card"     *ngFor="let card of list.cards">
-                        <!--<ndv-edit [title]="'title'" [permission]="checkPermissions(perm)" [placeholder]='card.title' (onSave)='save($event)'></ndv-edit>-->
-                        {{ card.title }}
+                        <span class="drag-handle-card">&#x2719;</span><ndv-area [title]="'title'" [permission]="checkPermissions(perm)" [placeholder]='card.title' (onSave)='saveCard($event, card, list)'></ndv-area>
+                        <!--<span class="drag-handle-card">&#x2719;</span>{{ card.title }}-->
                     </li>
                 </ul>
+                <ul>
+                    <li (click)="addCardToList(list)" class="button">Add Card</li>
+                </ul>
             </div>
+        </div>
             <div class="list two columns">
-            <h4 class="button" (click)="addNewList()">Add List</h4>
-
+                <h4 class="button" (click)="addNewList()">Add List</h4>
             </div>
         </div>
 </div>
